refactor: 更新配置文件和添加注释
- 将 MAX_ACCOUNTS 默认值从 10 调整为 20，以适应更多的账号需求
- 更新 .env.example 中的 BROWSER_PATH 和 CURSOR_PATH 默认路径
- 在 get_email_code.py 中添加注释，提高代码可读性

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ BROWSER_USER_AGENT="Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_6) AppleWebKit/
 # 是否使用动态ua池
 DYNAMIC_USERAGENT=False
 # Windows 浏览器路径
-#BROWSER_PATH="C:\Users\Administrator\AppData\Local\Google\Chrome\Bin\chrome.exe"
+BROWSER_PATH="C:\Program Files\Google\Chrome\Application\chrome.exe"
 # 是否启用浏览器代理
 USE_PROXY=False
 # 代理类型
@@ -58,4 +58,4 @@ ENABLE_UI=True
 
 # Cursor main.js 主文件路径
 # windows用户部分安装时是自定义目录安装的，需要修改该配置
-#CURSOR_PATH="D:\devtools\cursor"
+CURSOR_PATH="C:\Users\Administrator\AppData\Local\Programs\cursor\Cursor.exe"
